Fix: testimonial quote icon being cut off by overflow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -153,11 +153,17 @@ html {
    TESTIMONIOS SLIDER
    ============================================ */
 .testimoniosSwiper {
-    padding: 20px 0 50px 0;
+    padding: 30px 0 50px 0;
+    overflow: visible;
+}
+
+.testimoniosSwiper .swiper-wrapper {
+    overflow: visible;
 }
 
 .testimoniosSwiper .swiper-slide {
     height: auto;
+    overflow: visible;
 }
 
 .testimoniosSwiper .swiper-slide > div {
